@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.900 2009/06/13 00:43:28 martin Exp $
+# $Id: CHANGES,v 1.901 2009/06/22 16:29:37 sb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.0 beta4 (2009/06/??)
+ - (2009/06/22) Fixed bug# 3907 - Sum rows/columns in stats only adds integers.
  - (2009/06/13) Fixed bug# 3791 - Safari v3+4 cannot work with WYSIWYG Editor.
  - (2009/06/10) Fixed bug# 3882 - Dashboard does not set LastScreenOverview.
  - (2009/06/10) Added own web user agent, Kernel::System::WebUserAgent. Removed
